// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton rendering renders expected elements 1`] = `
<span
  aria-checked={true}
  className="RadioButton TestClass"
  id="test"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="radio"
  tabIndex={0}
>
  Test
</span>
`;

exports[`RadioButton rendering renders expected elements when error is true 1`] = `
<span
  aria-checked={true}
  className="RadioButton TestClass RadioButton--error"
  id="test"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="radio"
  tabIndex={0}
>
  Test
</span>
`;

exports[`RadioButton rendering renders expected elements when tabIndex is set 1`] = `
<span
  aria-checked={true}
  className="RadioButton TestClass"
  id="test"
  onClick={[MockFunction]}
  onKeyDown={[Function]}
  role="radio"
  tabIndex={-1}
>
  Test
</span>
`;
